--- a/src/global.scss
+++ b/src/global.scss
@@ -703,5 +703,11 @@ ion-modal.ion6modalviewsignature {
 .pointHand{
   cursor:pointer;
 }
+ion-action-sheet.my-custom-classdata .action-sheet-group {
+  background: #fffffe;
+}
 
+ion-action-sheet.my-custom-classdata .action-sheet-title {
+  color: #080000;
+}
 
