--- a/src/app/pages/in-patient-patient-information/diagnostic-results/diagnostic-results.page.html
+++ b/src/app/pages/in-patient-patient-information/diagnostic-results/diagnostic-results.page.html
@@ -1,15 +1,22 @@
 <ion-header mode="md" class="ion-no-border">
-  <div>
-    <ion-toolbar color="mango">
-      <ion-title>
-        <ion-icon
-          name="arrow-back-outline"
-          (click)="back()"
-          class="pointer icon-center"></ion-icon>
-        Diagnostic Results
-      </ion-title>
-    </ion-toolbar>
-  </div>
+  <ion-toolbar color="mango">
+    <span
+      class="padding-left-10"
+      (click)="back()"
+      routerDirection="backward"
+      color="chh-css-primary2">
+      <ion-icon name="arrow-back-outline" class="my-icon vcenter"></ion-icon>
+      <!--ion-icon 
+        name="chevron-back-outline" 
+        class="my-icon vcenter">
+      </ion-icon-->
+    </span>
+
+    <span class="padding-left-30 font-weight-500 font-size-20">
+      &nbsp;&nbsp;Diagnostic Results
+    </span>
+  </ion-toolbar>
+
   <ion-grid class="ion-no-padding" *ngIf="!isDesktop">
     <ion-row class="">
       <ion-col
@@ -28,7 +35,8 @@
           [is_philhealth_membership]="is_philhealth_membership"
           [patientDetailfromApi_from]="patientDetailfromApi_from"
           [patientDetailfromApi_to]="patientDetailfromApi_to"
-          [admission_status]="admission_status">
+          [admission_status]="admission_status"
+          [showPFDetals]="false">
         </app-chh-app-patient-header>
       </ion-col>
     </ion-row>
